# supervisor

./: .gitignore  LICENSE.txt  Makefile  Makefile.in  README  README.txt  childprocess.cxx  childprocess.hpp  config.cxx  config.hpp  configure.in  daemonize.cxx  daemonize.h  defines.h.in  eventdispatcher.cxx  eventdispatcher.hpp  family.cxx  family.hpp  logger.cxx  logger.hpp  pidfile.cxx  pidfile.hpp  rc.sh  supervisor.conf  supervisor.cxx  supervisor.hpp  tricky.pl
debian/: changelog  control  docs  install  rules
